# kairos

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
autopilot/: __init__.py  builder.py  engine.py  reconciliation.py  state.py  strategy.py  types.py
autopilot/backtest/: engine.py
autopilot/data/: cache.py  catalog.py
autopilot/exchanges/: base.py  binance.py  binance_ws.py  paper.py  reconnect.py
autopilot/indicators/: __init__.py  adx.py  atr.py  base.py  bollinger.py  donchian.py  ema.py  hma.py  macd.py  obv.py  rsi.py  sma.py  stochastic.py  vwap.py
autopilot/marketplace/: __init__.py  builtin.py  registry.py
autopilot/orders/: manager.py  position.py
autopilot/parity/: __init__.py  matcher.py
autopilot/risk/: validator.py
docs/: architecture.md  backtesting.md  exchange-setup.md  getting-started.md  indicators.md  release.md  strategy-guide.md  vision.md
examples/: backtest_live.py  bracket_orders.py  dca_bot.py  ema_cross.py  grid_bot.py  live_engine_minimal.py  scalping.py
kairos/: __init__.py  analytics.py  builder.py  engine.py  events.py  reconciliation.py  strategy.py  types.py
kairos/actors/: __init__.py  base.py
kairos/adapters/: __init__.py  base.py  binance_live.py  bybit_live.py
kairos/backtest/: engine.py
kairos/cache/: __init__.py  market_cache.py
kairos/data/: cache.py  catalog.py
kairos/exchanges/: base.py  binance.py  binance_ws.py  exceptions.py  paper.py  reconnect.py
kairos/execution/: __init__.py  bracket_manager.py  policy.py  reconciler.py
kairos/indicators/: __init__.py  adx.py  atr.py  base.py  bollinger.py  donchian.py  ema.py  hma.py  macd.py  obv.py  rsi.py  sma.py  stochastic.py  vwap.py
kairos/marketplace/: __init__.py  builtin.py  registry.py
kairos/orders/: manager.py  position.py
kairos/parity/: __init__.py  matcher.py
kairos/risk/: validator.py
kairos/runtime/: __init__.py  clock.py  event_bus.py  live_engine.py  parameters.py  scheduler.py
kairos/strategies/: __init__.py  live.py
legacy/autopilot-engine/: LICENSE  README.md  pyproject.toml
legacy/autopilot-engine/autopilot/: __init__.py
openspec/changes/archive/2026-04-26-fix-bracket-fill-callback-and-rejected-handling/: tasks.md
openspec/changes/archive/2026-04-26-fix-bracket-fill-callback-and-rejected-handling/specs/bracket-fill-pipeline/: spec.md
openspec/changes/fix-bracket-fill-callback-and-rejected-handling/: design.md  proposal.md  tasks.md
openspec/specs/bracket-fill-pipeline/: spec.md
scripts/: release.sh
tests/: test_actor.py  test_binance_adapter_rejection.py  test_binance_fill_callback_propagation.py  test_binance_live.py  test_binance_secret_normalization.py  test_bracket_manager.py  test_bybit_live.py  test_bybit_submit_raises_on_failure.py  test_clock.py  test_event_bus.py  test_execution_policy.py  test_fill_explanation_hook.py  test_indicators.py  test_live_adapter_protocol.py  test_live_engine.py  test_live_engine_integration.py  test_live_strategy.py  test_market_cache.py  test_paper.py  test_parameters.py  test_parity.py  test_positions.py  test_reconciler.py  test_risk.py  test_scheduler.py  test_strategy_gate.py  test_strategy_signal.py
