[project]
name = "autopilot-engine"
version = "0.1.0"
description = "Simple, powerful, Python-first crypto trading framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Trading Autopilot" }]
keywords = ["trading", "crypto", "bitcoin", "binance", "bot", "algorithmic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # Exchange connectivity
    "ccxt>=4.0.0",
    "websockets>=14.0",

    # Async
    "asyncio-mqtt>=0.16.0",

    # Data
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",

    # Configuration
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",

    # HTTP
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]
plot = [
    "matplotlib>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/Vekkris76/autopilot-engine"
Documentation = "https://github.com/Vekkris76/autopilot-engine/tree/main/docs"
Repository = "https://github.com/Vekkris76/autopilot-engine"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.backends._legacy:_Backend"
