[project]
name = "kairos-engine"
version = "0.4.1"
description = "Kairos — adaptive crypto trading engine. Curates the best of the open-source ecosystem and adds a learning layer on top."
readme = "README.md"
license = { text = "MIT" }   # under review for v1.0; v0.1.x and v0.2.x stay MIT
requires-python = ">=3.11"
authors = [{ name = "Kairos / Trading Autopilot", email = "noreply@trading-autopilot.dev" }]
keywords = ["trading", "crypto", "bitcoin", "binance", "bot", "algorithmic", "adaptive", "kairos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # Exchange connectivity (curated: 200+ exchanges, MIT)
    "ccxt>=4.0.0",
    "websockets>=14.0",

    # Configuration
    "pydantic>=2.0.0",

    # HTTP
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]
data = [
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
]
plot = [
    "matplotlib>=3.8.0",
]
all = [
    "kairos-engine[data,plot]",
]

[project.urls]
Homepage = "https://github.com/Vekkris76/kairos"
Documentation = "https://github.com/Vekkris76/kairos/tree/main/docs"
Repository = "https://github.com/Vekkris76/kairos"
Changelog = "https://github.com/Vekkris76/kairos/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = { find = { include = ["kairos*"], exclude = ["tests*", "examples*"] } }

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"
